--- a/Chimica Biologica/Bibliografia.bib
+++ b/Chimica Biologica/Bibliografia.bib
@@ -1,11 +1,19 @@
-@book{nome per \cite,
-    title={titolo},
-    author={autore},
-    year={anno},
-    publisher={editore},
-	edition = {edizione},
-    keywords = {parole chiave}
+@book{cancaro1,
+    title={Fondamenti di Biochimica},
+    author={D.Voet, J. G. Voet, C.W. Pratt},
+    year={2017},
+    publisher={Zanichelli},
+	edition = {4° edizione},
+    keywords = {biochemistry}
 }
 
+@book{cancaro2,
+    title={Biochimica},
+    author={L. Streyer},
+    year={2020},
+    publisher={Zanichelli},
+	edition = {8° edizione},
+    keywords = {biochemistry}
+}
 
 
