--- a/Chimica Biologica/Capitoli/01.tex
+++ b/Chimica Biologica/Capitoli/01.tex
@@ -32,10 +32,10 @@ sua struttura e dai suoi gruppi funzionali.
 
 La vita è caratterizzata da:
 \begin{itemize}
-\item Biodiversità: si vede come la vita
+\item \emph{Biodiversità:} si vede come la vita
 riguarda una vasta gamma di organismi, come licheni, meduse, microbi,
 esseri umani, etc \ldots{}
-\item Unità chimica: La materia vivente obbedisce
+\item \emph{Unità chimica:} La materia vivente obbedisce
 alle stesse leggi chimiche e fisiche che governano tutta la materia
 \end{itemize}
 
@@ -43,7 +43,7 @@ La Terra si è formata 4.6 miliardi di anni fa, mentre la vita è comparsa
 3.6 miliardi di anni fa. Si pensa che il sole e l'energia proveniente
 dai fulmini abbiano fornito l'energia necessaria per la formazione di
 molecole organiche a partire da \ce{H2O}, \ce{N2}e \ce{CO2}. Le prime
-forme di vita sono i cianobatteri fotosintetici, che producono ce\{O2\}.
+forme di vita sono i cianobatteri fotosintetici, che producono \ce{O2}.
 In seguito si sono sviluppati i batteri anaerobici, che sviluppano
 \ce{O2} e quindi i batteri aerobici, ovvero tutti gli altri.
 
@@ -132,7 +132,7 @@ membrana e riesce a collegare che
 reazione di ATP-sintasi è un grande complesso proteico di membrana
 (Boyer e Walker, Nobel 1998).
 
-Genetica
+\paragraph{Genetica}
 
 Nel 1944 Oswald Avery scopre che un acido nucleico è formato dal
 desossiribosio e che questo polisaccaride è l'unità fondamentale del
