--- a/Chimica Biologica/Capitoli/04.tex
+++ b/Chimica Biologica/Capitoli/04.tex
@@ -496,7 +496,9 @@ permesse. Le conformazioni non permesse sono quelle in cui le distanze
 interatomiche tra gli atomi non legati è inferiore ai raggi di van der
 Waals.
 
-\autofullpicture*{Mappa di Ramachandran.}
+\autofullpicture*{Mappa di Ramachandran. Le zone blu sono quelle permesse senza conflitti sterici, mentre le zone verdi hanno conflitti ma sono comunque permesse. \\Le zone bianche non sono permesse o sono poco probabili. I pallini rossi corrispondono a coppie che sono quelle che ricorrono
+in residui che si susseguono a definire le strutture secondarie più
+probabili.}
 
 Le diverse coppie di angoli vengono ritrovate e riassunte nel diagramma
 di Ramachandran (mappa delle conformazioni permesse) dove si
@@ -510,9 +512,7 @@ La glicina è particolare perché presenza zone possibili molto maggiori rispett
 sterico (punti neri).
 }
 
-\autofullpicture*{Mappa di Ramachandran. Le zone blu sono quelle permesse senza conflitti sterici, mentre le zone verdi hanno conflitti ma sono comunque permesse. \\Le zone bianche non sono permesse o sono poco probabili. I pallini rossi corrispondono a coppie che sono quelle che ricorrono
-in residui che si susseguono a definire le strutture secondarie più
-probabili.} %4
+\autofullpicture*{Mappa di Ramachandran, con le struttura secondarie. } %4
 
 Le combinazioni di angoli accettabili rappresentano le ``sottoclassi di
 strutture''. Le strutture secondarie più ricorrenti sono l'\alpha-elica
@@ -525,7 +525,7 @@ e il \beta-sheet.
 L'\alpha-elica è un elica destrorsa. Gli angoli di torsione che
 caratterizzano questa struttura sono \( \Phi = -57^{\circ} \) e \( \Psi = -47^{\circ} \).
 Questa struttura è particolare perché consente la formazione di legami
-ad idrogeno tra i gruppi \ce{NH-} e \ce{C=O}. Il passo dell'elica,
+ad idrogeno tra i gruppi \ce{NH} e \ce{C=O}. Il passo dell'elica,
 ovvero la distanza di avanzamento dell'elica per ogni giro, è di 5.4
 \AA. L\alpha-elica possiede inoltre una lunghezza media di circa 12
 residui.
