--- a/Chimica Biologica/Capitoli/05.tex
+++ b/Chimica Biologica/Capitoli/05.tex
@@ -35,7 +35,7 @@ Tutte le \alpha-cheratine, hanno in comune l'adozione della \alpha-alicha e
 formazione di coil (eliche che tendono a formare sovrastrutture).
 
 Le \alpha-eliche si sovrappongono per interazioni idrofobiche per
-minimizzare. Si usano \alpha-eliche destrorse, che si super-avvolgono in
+minimizzarle. Si usano \alpha-eliche destrorse, che si super-avvolgono in
 senso sinistrorso.
 
 Nel capello sono presenti \alpha-eliche, che formano microfibrille e
@@ -122,8 +122,7 @@ Si formano fasci di triple eliche, che formano fibre macroscopiche.
 
 Dal punto di vista della struttura è necessario avere una glicina ogni
 tre amminoacidi (Gly-X-Y-Gly-etc). Anche le X e Y non sono a caso. X è
-spesso una prolina e la Y è spesso una proteina modificata ed è
-l'4-idrossi-prolina. Non è codificato dal DNA, ma viene sintetizzata
+spesso una prolina e la Y è spesso un amminoacido modificato, come l'4-idrossi-prolina. Non è codificato dal DNA, ma viene sintetizzata
 dopo.
 La Gly è fondamentale affinché la tripla elica si formi.
 
@@ -144,7 +143,7 @@ l'idrossiprolina.
 La reazione prevede che la prolina in catena prevede un consumo di
 \alpha-chetoglutarato che reagisce con una reazione con \ce{O2} e di \ce{Fe^{2+}}. La reazione
 prevede che del ferro si ossidi; un prodotto è la \ce{CO2} con l'ossidazione
-del carbonio del gruppo ossidrilico. Il \ce{Fe^{2+}} viene ripristinato da fe3+ tramite l'utilizzo di
+del carbonio del gruppo ossidrilico. Il \ce{Fe^{2+}} viene ripristinato da \ce{Fe*{3+}} tramite l'utilizzo di
 ascorbato.
 
 \autoherepicture{0.8}
