--- a/Chimica Biologica/Capitoli/06.tex
+++ b/Chimica Biologica/Capitoli/06.tex
@@ -219,7 +219,7 @@ Ad esempio, RNasi A, si può denaturare per l'utilizzo di
 ad idrogeno, tramite l'urea.
 
 Se si prende la proteina denaturata (dopo aver utilizzato un agente
-denaturante) e si mette la proteina in ambiente fisiologico (si mette
+rinaturante) e si mette la proteina in ambiente fisiologico (si mette
 quindi la proteina in un ambiente denaturante), la proteina riprende la
 sua struttura nativa.
 Se si ha un'interazione in un ambiente, la proteina instaura le
@@ -396,7 +396,7 @@ Le scale temporali sono diverse, a seconda del moto e a seconda della
 complessità della proteina. A seconda del tempo, si può avere un legame
 con un substrato.
 Ad esempio, nella mioglobina, si ha un movimento che permette di
-rilasciare ossigeno, causato da un istidina. Il moto prevede dele
+rilasciare ossigeno, causato da un istidina. Il moto prevede delle
 istantanee, che consentono di visualizzare il movimento delle parti
 delle molecole. Queste sarebbero le immagini corrette.
 
