--- a/Chimica Biologica/Capitoli/07.tex
+++ b/Chimica Biologica/Capitoli/07.tex
@@ -364,6 +364,8 @@ substrato e la sua attività è regolata dal substrato presente.
 Il massimo di probabilità della variazione della conformazione si ha
 quando si legano una o più molecole di \ce{O2}.
 
+\paragraph{Effetto Bohr}
+
 Questa cosa succede anche con altri fattori allosterici, quindi si ha un
 controllo anche in base ad altri fattori.
 La \ce{CO2} viene prodotta dalla glicolisi e poi viene eliminata. La
