--- a/Chimica Biologica/Capitoli/10.tex
+++ b/Chimica Biologica/Capitoli/10.tex
@@ -787,7 +787,7 @@ Il fegato, a demolire il glicogeno, lo sintetizza a partire dai carboidrati che 
 
 La fosforilasi B comunque possiede un'attività catalitica, però opera in modo blando a condizioni basali. La fosforilasi A invece è molto più veloce nel processo di demolizione del glicogeno. La fosforilasi B possiede due forme, ovvero T e R. La forma T è molto inibita, mentre la forma R è inibita. La fosforilasi A possiede anch'essa due forme, la T e la R. La forma T è attivata, mentre la forma R è molto attivata.
 
-L'ATP e il G6P sono degli inibitori della fosforilasi A, l'AMP invece è un attivatore della fosforilasi B. Il glucosio invece è un inibitore della fosforilasi A. Tutti questi processi lavorano a feedback negativo.
+L'ATP e il G6P sono degli inibitori della fosforilasi B, l'AMP invece è un attivatore della fosforilasi B. Il glucosio invece è un inibitore della fosforilasi A. Tutti questi processi lavorano a feedback negativo.
 
 La produzione della fosforilasi A è causata da uno stimolo ormonale; questo causa una cascata di eventi che porta alla produzione della fosforilasi A
 
