--- a/Chimica Biologica/Capitoli/12.tex
+++ b/Chimica Biologica/Capitoli/12.tex
@@ -140,7 +140,7 @@ La reazione che avviene è la seguente
 3 \ce{Na+_{\text{in}}} + 2 \ce{K+_{\text{out}}} + \text{ATP} \ce{->} 3 \ce {Na+_{\text{out}} + 2 \ce{K+_{\text{in}}} + \text{ADP} + \text{P}}
 \]
 
-\paragraph{Antiporto elettrogenico}
+\paragraph{Pompa sodio-potassio}
 
 \autofullpicture*{Diagramma schematico della pompa sodio-potassio della membrana plasmatica dei mammiferi}
 
