--- a/Chimica Biologica/Capitoli/15.tex
+++ b/Chimica Biologica/Capitoli/15.tex
@@ -13,7 +13,7 @@ I due filamenti di DNA sono antiparalleli, quindi ciascun filamento forma un'eli
 Le basi stanno all'intero e le catene zucchero-fosfato stanno all'esterno, in modo tale da diminuire le repulsioni tra gruppi fosfati caricati negativamente.
 La superficie presenta due scanalature di differente ampiezza, che vengono definite \emph{scanalatura maggiore} e \emph{scanalatura minore}.
 
-Ogni base forma dei legami ad idrogeno con la base appaiata nel filamento opposto, dando luogo ad una coppia di basi planari. Gli pagamenti sono A-T e G-C, ovvero tra basi complementari
+Ogni base forma dei legami ad idrogeno con la base appaiata nel filamento opposto, dando luogo ad una coppia di basi planari. Gli appaiamenti sono A-T e G-C, ovvero tra basi complementari
 Le basi sono quasi perpendicolari all'asse e le coppie nello stesso filamento distano 0.34 nm. Il passo della doppia elica è di 3.4 nm.
 
 \automarginpicture*{Struttura del DNA}
@@ -58,7 +58,7 @@ Una coltura del batterio di E. Coli è stata fatta prolificare in presenza di az
 Questa tecnica consiste nella centrifugazione del campione in una provetta contenente{CsCl}, che riesce a creare un gradiente di densità.
 }
 
-A seguito della centrifugazione, nella generazione zero è stata ottenuta una singola banda, con una densità caratteristica del \ce{^{15}N}. Nella prima generazione, è stata ottenuta una banda, con densità pari alla media di \ce{^{15}N} e \ce{^{15}N}. Nella terza generazione. Nella seconda generazione, la banda vista prima si sdoppia, formando due bande con le densità relative.
+A seguito della centrifugazione, nella generazione zero è stata ottenuta una singola banda, con una densità caratteristica del \ce{^{15}N}. Nella prima generazione, è stata ottenuta una banda, con densità pari alla media di \ce{^{14}N} e \ce{^{15}N}. Nella terza generazione. Nella seconda generazione, la banda vista prima si sdoppia, formando due bande con le densità relative.
 
 \autofullpicture*{Esperimento di Meselson e Stahl}
 
@@ -68,10 +68,10 @@ I dati sperimentali quindi confermano la replicazione semiconservativa.
 
 Nella struttura del DNA sono presenti le seguenti forze:
 \begin{itemize}
-\item Interazioni idrofobiche: l'interno del Dna è idrofobico, mentre l'estero è idrofilo, grazie alla presenza dei gruppi fosfato
-\item Legami a idrogeno: i legami a idrogeno si formano tra le basi complementari
+\item \emph{Interazioni idrofobiche:} l'interno del Dna è idrofobico, mentre l'estero è idrofilo, grazie alla presenza dei gruppi fosfato
+\item \emph{Legami a idrogeno:} i legami a idrogeno si formano tra le basi complementari
 \item Forze di van der Waals: nello stacking delle basi, si formano delle forze deboli, ma additiva
-\item Interazioni elettrostatiche: le interazioni elettrostatiche sono destabilizzati rispetto ai vari gruppi fosfato, ma sono neutralizzata dalle cariche positiva, che possono essere sia ioni che proteina
+\item  \emph{Interazioni elettrostatiche:} le interazioni elettrostatiche sono destabilizzati rispetto ai vari gruppi fosfato, ma sono neutralizzata dalle cariche positiva, che possono essere sia ioni che proteina
 \end{itemize}
 
 La struttura del DNA è rilassata, in quanto non ci sono costruzioni conformazionali. Lo scheletro formato da zuccheri-fosfati non è una struttura rigida, ma è libera di muoversi. Infatti, si ripiega per occupare il minor spazio possibile. Quando due filamenti si separano, assumono una conformazione casuale.
@@ -113,19 +113,21 @@ Conformazione del legame glicosidico & Anti & Anti & Anti (pirimidine) Sin (Puri
 \end{table}
 \endgroup
 
-Il DNA presente nella cellula è in forma B. Una piccola frazione può essere localmente nella forma Z, dove c'è alternanza di basi puriniche e pirimidiniche. La forma A è presente in RNA-duplex e negli ibridi DNA-RNA.
+Il DNA presente nella cellula è in forma B. Una piccola frazione può essere localmente nella forma Z, dove c'è alternanza di basi puriniche e pirimidiniche. La forma A è presente in RNA-duplex e negli ibridi DNA-RNA.{}
 L'elica Z ha un avvolgimento sinistrorso, struttura zuccheri-fosfato a zig-zag, ha un passo maggiore, ovvero di 44 \AA{} rispetto a 34 \AA.
 Questa struttura si ottiene alternando le basi puriniche e pirimidiniche, come ad esempio CGCGCG.{} Questa conformazione è stabilizzata a alte concentrazioni saline, ha 12 basi per giro e un diametro minore di 18 \AA.
 
 \autofullpicture*{Sia nella forma A che nella forma B, la conformazione del legame glicosidico è anti, mentre dell'elica Z, i residui pirimidinici sono in tanti, mentre quelli purinici sono in sin.}
 
-Il DNA A è stabile in concentrazioni di bassa umidità, è una forma più ampia e piatta. Le molecole di RNA-duplex sono della forma A per effetto dell'essoderile. Anche le molecole ibride DNA-RNA sono nella forma A. L'elica ja verso destrorso, il passo e di 28 \AA, si hanno 11 basi per giro, il buco assuale ha diametro 6 \AA{} e i piani delle basi sono inclinati di 20°.
+Il DNA A è stabile in concentrazioni di bassa umidità, è una forma più ampia e piatta. Le molecole di RNA-duplex sono della forma A per effetto dell'ossidrile. Anche le molecole ibride DNA-RNA sono nella forma A. L'elicahja verso destrorso, il passo e di 28 \AA, si hanno 11 basi per giro, il buco assuale ha diametro 6 \AA{} e i piani delle basi sono inclinati di 20°.
 
 Può essere immaginata come un nastro avvolto in un cilindro di diametro 6 \AA.
 
 Nel DNA A, lo zucchero è nella conformazione a mezza sedia e ha il C3' rivolto verso l'alto. Il C3' è in posizione endo. Il C3 è spostato verso l'anello su cui sta C5'. Nel DNA-B C2' è in posizione endo, quindi C2' è spostato verso l'anello su cui sta C5'. Nel DNA Z, lo zucchero a cui sono state attaccate le basi pirimidiniche hanno il C2' in posizione endo, mentre l'altro zucchero, ovvero quello delle basi puriniche, ha C3' endo.
 
 \marginbox*{Il termine \emph{endo} significa ``dentro'', mentre il termine \emph{eso} significa ``fuori''}
+
+\clearpage
 
 \section{Superavvolgimenti}
 
