--- a/Chimica Biologica/Capitoli/16.tex
+++ b/Chimica Biologica/Capitoli/16.tex
@@ -264,10 +264,9 @@ Le differenze sono:
 
 I ribosomi sono ribonucleoproteine e sono composti da varie subunità contenenti l'RNA ribosomiale.
 
-L'mRNA scorre nella parte bassa del ribosoma. Nel ribosoma ci sono tre siti, ovvero E (Exit), P (Peptidico) ed A (Amminoacidico). Nel ribosoma può entrare qualunque tipologia di dd-tRNA; entrano da A ed escono da E. Quando entra quello giusto, ovvero quello che lega il codone di inizio del mRNA, inizia la sintesi. Il tRNA sta su P e aspetta che arrivi dd-tRNA giusto in A. Quando questo arriva, si forma il primo legame peptidico.
+L'mRNA scorre nella parte bassa del ribosoma. Nel ribosoma ci sono tre siti, ovvero E (Exit), P (Peptidico) ed A (Amminoacidico). Nel ribosoma può entrare qualunque tipologia di dd-tRNA; entrano da A ed escono da E. Quando entra quello giusto, ovvero quello che lega il codone di inizio del mRNA, inizia la sintesi. Il tRNA sta su P e aspetta che arrivi l'amminoacil-tRNA giusto in A. Quando questo arriva, si forma il primo legame peptidico.
 
 A questo punto l'mRNA scorre e fa traslocare il primo tRNA su E e il secondo su P.
-
 Il tRNA ha altre proteine di accompagnamento dette EF-Tu, che non mascherano il codone
 
 \autofullpicture*{Proteine EF-Tu}
